# OC_02_ModeTrends

./: .gitignore  README.md  Support_Christophe_Ringot.pptx  images_func.py  main.ipynb  main.py  pyproject.toml
assets/: Support+de+présentation+ModeTrends.pptx
